try to fix horizontal scroll bar

--- a/css/stylish-portfolio.scss
+++ b/css/stylish-portfolio.scss
@@ -242,7 +242,8 @@ body {
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
 
-  width: calc(100% * (1/3));
+  width: 32%;
+  width: 32vw;  
   min-width: 280px;
 }
 
